[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-tts"
version = "0.1.0"
description = "FastAPI Piper TTS Server"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "aiomqtt",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "piper-tts" # The Python wrapper for Piper
]

[project.scripts]
voice-tts = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "config"
]
